add revalidate time

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
@@ -17,16 +17,16 @@ body {
 body {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  width: 100vw !important; 
+  width: 100vw !important;
   overflow-x: hidden !important;
 
-  /* font-family: 'Big Shoulders Stencil Text'; */ 
+  /* font-family: 'Big Shoulders Stencil Text'; */
 }
 *:focus {
   box-shadow: none !important;
 }
-.HeroText { 
-  font-family: "Big Shoulders Stencil Text",   !important;
+.HeroText {
+  font-family: "Big Shoulders Stencil Text" !important;
 }
 .tabItemStyle {
   font-size: 20px !important;
@@ -49,17 +49,16 @@ body {
   .btn {
     @apply w-40 text-center py-2.5 cursor-pointer rounded-md bg-primary hover:bg-primary/80 border-none text-white font-medium text-base;
   }
-  .layout{
+  .layout {
     @apply w-full h-full  max-w-[1148px] mx-auto px-2 xxs:px-4 xs:px-8 xl:px-0;
   }
 }
 
-
-.bottom-top{
+.bottom-top {
   animation: bottom-top 15s linear infinite;
 }
-.bottom-top:hover{
-  animation-play-state: paused; 
+.bottom-top:hover {
+  animation-play-state: paused;
 }
 
 @keyframes bottom-top {
@@ -68,16 +67,28 @@ body {
   }
   100% {
     transform: translateY(-100%);
-  } 
+  }
 }
 
 .customeHtml ul,
 .customeHtml ol {
-  list-style:decimal;
+  list-style: decimal;
   padding-left: 1.5rem;
   margin: 1rem 0;
 }
 .customeHtml ul li,
-.customeHtml ol li { 
+.customeHtml ol li {
   margin-bottom: 0.5rem !important;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #03205e !important;
+}
+
+@media screen and (max-width: 450px) {
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 22px !important;
+  }
 }
